@@ -340,6 +340,15 @@ Example  : awaitship\n\r\
 While standing on a shore, this skill will cause the sailors nearest big sailing ship \
 to be sailed to where the sailor is.
 
+AWAIT_CLAN_SHIP=SKILL_AWAITCLANSHIP
+AWAITCLANSHIP=SKILL_AWAITCLANSHIP
+SKILL_AWAITCLANSHIP=<ABILITY>\
+Usage    : AWAITCLANSHIP\n\r\
+Example  : awaitclanship\n\r\
+While standing on a shore, this skill will cause the sailors nearest big sailing ship \
+belonging to their to be sailed to where they are, provided there is no one aboard who \
+could do it for them.
+
 THIEF_AVOIDTRAPS=AVOID_TRAPS
 AVOID_TRAPS=<ABILITY>\
 Example  : \n\r\
