@@ -10,6 +10,7 @@
   9. New Exit type: Skyway -- for supporting the above.
  10. New Achievement type: CHARITY
  11. New Disable flag: FATIGUE
+ 12. New clan skill: Await Clan Ship
 
 # Build 5.10.1 Release 1/01/2023
   1. FasterRecovery expanded and new char stat REJUVRATE for Prop*Adjuster
